fix(Shipment): Special-request validation , content alignment on dashboard, amount correction based on request type (#277)
fix(Shipment): Special-request validation , content alignment on dashboard, amount correction based on request type (#277)

--- a/member/client/app/app.scss
+++ b/member/client/app/app.scss
@@ -833,6 +833,10 @@ li.dndPlaceholder {
   color: #fff;
 }
 
+.no-padding-right{
+  padding-left: 0px !important;
+}
+
 .bucket-color{
   background-color:  #f9f2d4 !important; ;
 }
